# coin_vlm_finetune

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.mlflow  Dockerfile.train  Makefile  README.md  constraints.txt  docker-compose.airflow.yml  docker-compose.mlflow.yml  docker-compose.serve.yml  docker-compose.yml  environment.yml  main.py  pyproject.toml  requirements-serve.txt  requirements.txt
config/backend/: full_finetune.yaml  hf_peft_lora.yaml  hf_peft_lora_paligemma.yaml  hf_peft_lora_paligemma_448.yaml  unsloth_lora.yaml  unsloth_qlora.yaml  unsloth_qlora_internvl3.yaml  unsloth_qlora_qwen35.yaml
config/data/: coin_dataset.yaml
config/inference/: inference.yaml
config/method/: full_finetune.yaml  unsloth_qlora.yaml
config/model/: intern_vl3_5_8b_hf.yaml  intern_vl3_8b.yaml  intern_vl_8b.yaml  paligemma2_10b_448.yaml  paligemma2_10b_896.yaml  paligemma2_3b_448.yaml  qwen3.5_4b.yaml  qwen3.5_9b.yaml  qwen3_vl_8b.yaml
config/serving/: serving.yaml  serving_paligemma.yaml
config/training/: base_trainer.yaml  training.yaml
dags/: coin_retrain.py
data/annotations/: labels.json  labels_raw.json
data/preprocessing_script/: check_label.py  filter_combine_label.py
data/processed/: push_dataset.py
data/splits/: split.py  test.json  train.json  validation.json
deploy/monitoring/: README.md  alerts.yml  docker-compose.monitoring.yml  prometheus.yml  run_monitoring.sh
docs/: serve_qwen35_vllm.md
scripts/: evaluate.py  export.py  inference.py  logger.py  register_model.py  serve.py  train.py
src/model/: base.py  (+5 more)
(+36 files in other folders)
